# operations-software-varnish-libvmod-tbf

./: .gitmodules  AUTHORS  Makefile.am  NEWS  README  THANKS  bootstrap  configure.ac  git2chg.awk
debian/: changelog  control  copyright  dirs  gbp.conf  libvmod-tbf.install  libvmod-tbf.manpages  rules
debian/patches/: 0001-build-out-of-tree.patch  series
src/: .gitignore  Makefile.am  getla.c  sleep.c  tbf.c  tbf.h  time.c  vmod-tbf.3  vmod_tbf.3  vmod_tbf.c  vmod_tbf.vcc
tests/: .gitignore  Makefile.am  test00.vtc  test00.vti  test01.vtc  test02.vtc  test02.vti  test03.vtc  test05.vtc  time00.vtc  time01.vtc
